Finished All CP excercises

--- a/CP_Assignments/assignments-cpsat/Travelling Salesperson with Precedences.ipynb
+++ b/CP_Assignments/assignments-cpsat/Travelling Salesperson with Precedences.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here ..."
+    "routing.AddConstantDimension(1, num_locations, True, \"count\")\n",
+    "count = routing.GetDimensionOrDie('count')\n",
+    "\n",
+    "for i in range(num_teams):\n",
+    "    count.CumulVar(routing.End(i)).SetMin(2)"
    ]
   },
   {
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -146,8 +150,13 @@
     "routing.AddConstantDimension(1, sys.maxsize, True, \"time\")\n",
     "time = routing.GetDimensionOrDie(\"time\")\n",
     "\n",
-    "# Write your code here ...\n",
-    "# Use time.CumulVar(...)"
+    "dependencies = [\n",
+    "    (1, 2), (2, 11), (2, 4), (3, 4), (5, 4), (4, 9), \n",
+    "    (4, 8), (5, 6), (6, 7), (7, 8), (8, 10), (9, 10), (11, 4)\n",
+    "]\n",
+    "\n",
+    "for before, after in dependencies:\n",
+    "    solver.Add(time.CumulVar(before) < time.CumulVar(after))"
    ]
   },
   {
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,14 +210,14 @@
      "output_type": "stream",
      "text": [
       "Route for vehicle 0:\n",
-      "0 > 0\n",
-      "Total distance of vehicle 0: 0 miles\n",
+      "0 > 1 > 2 > 7 > 0\n",
+      "Total distance of vehicle 0: 706 miles\n",
       "\n",
       "Route for vehicle 1:\n",
-      "0 > 5 > 8 > 9 > 10 > 2 > 6 > 11 > 3 > 4 > 1 > 7 > 0\n",
-      "Total distance of vehicle 1: 1529 miles\n",
+      "0 > 5 > 6 > 11 > 3 > 4 > 8 > 9 > 10 > 0\n",
+      "Total distance of vehicle 1: 2537 miles\n",
       "\n",
-      "Total distance over all vehicles: 1529 miles\n"
+      "Total distance over all vehicles: 3243 miles\n"
      ]
     }
    ],
@@ -235,6 +244,13 @@
     "else:\n",
     "    print(\"No solution found.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -259,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
