--- a/CP_Assignments/assignments-cpsat/SumFrameSudoku.ipynb
+++ b/CP_Assignments/assignments-cpsat/SumFrameSudoku.ipynb
@@ -27,14 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
     "from ortools.sat.python import cp_model\n",
-    "from itertools import product"
+    "from itertools import product\n",
+    "import numpy as np"
    ]
   },
   {
@@ -46,14 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "top = [15, 18, 12, 11, 21, 13, 15, 17, 13]\n",
     "right = [22, 8, 15, 22, 12, 11, 15, 13, 17]\n",
     "bottom = [15, 9, 21, 10, 16, 19, 13, 15, 17]\n",
-    "left = [8, 15, 22, 11, 13, 21, 18, 19, 8]"
+    "left = [8, 15, 22, 11, 13, 21, 18, 19, 8]\n",
+    "n = 9"
    ]
   },
   {
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,20 +95,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-f3b519ce8a64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create board\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mboard\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNewIntVar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"({j})\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# the numbers occur only once in each row, each column or 3x3 square\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'n' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Type your model here ...\n",
-    "board = ..."
+    "# create board\n",
+    "board = [[model.NewIntVar(1, n, f\"({j})\") for j in range(1, n+1)] for i in range(1,n+1)]\n",
+    "\n",
+    "# the numbers occur only once in each row, each column or 3x3 square\n",
+    "for i in range(n):\n",
+    "    model.AddAllDifferent(board[i]) # rows\n",
+    "    model.AddAllDifferent([board[j][i] for j in range(n)]) # columns\n",
+    "    \n",
+    "# Each 3x3 sub-grid contains all numbers from 1 to 9 once\n",
+    "for i in range(3):\n",
+    "    for j in range(3): \n",
+    "        model.AddAllDifferent([board[i * 3 + di][j* 3 + dj] for di in range(3) for dj in range(3)])\n",
+    "\n",
+    "        \n",
+    "for i in range(n):\n",
+    "    model.Add(cp_model.LinearExpr.Sum([board[j][i] for j in range(3)]) == top[i]) # top sums\n",
+    "    model.Add(cp_model.LinearExpr.Sum([board[i][j] for j in range(3)]) == left[i]) # left sums\n",
+    "    model.Add(cp_model.LinearExpr.Sum([board[6][i],board[7][i],board[8][i]]) == bottom[i]) # bottom sums\n",
+    "    model.Add(cp_model.LinearExpr.Sum([board[i][6],board[i][7],board[i][8]]) == right[i]) # right sums\n",
+    "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -117,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +169,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] [4] [3] [2] [8] [5] [9] [6] [7] \n",
+      "\n",
+      "[8] [5] [2] [6] [9] [7] [4] [3] [1] \n",
+      "\n",
+      "[6] [9] [7] [3] [4] [1] [2] [8] [5] \n",
+      "\n",
+      "[2] [3] [6] [7] [1] [4] [8] [5] [9] \n",
+      "\n",
+      "[4] [8] [1] [9] [5] [6] [3] [7] [2] \n",
+      "\n",
+      "[9] [7] [5] [8] [2] [3] [6] [1] [4] \n",
+      "\n",
+      "[7] [2] [9] [1] [3] [8] [5] [4] [6] \n",
+      "\n",
+      "[5] [6] [8] [4] [7] [2] [1] [9] [3] \n",
+      "\n",
+      "[3] [1] [4] [5] [6] [9] [7] [2] [8] \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "solver = cp_model.CpSolver()\n",
     "_ = solver.SearchForAllSolutions(model, SolutionPrinter(board))"
@@ -154,15 +207,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime:   0.025222ms\n",
+      "Booleans:  26\n",
+      "Failures:  99\n",
+      "Branches:  176\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Runtime:   {solver.WallTime()}ms\")\n",
     "print(f\"Booleans:  {solver.NumBooleans()}\")\n",
     "print(f\"Failures:  {solver.NumConflicts()}\")\n",
     "print(f\"Branches:  {solver.NumBranches()}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
